--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Boardwise SA</title>
-    <link href="/index.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: { sans: ['Inter', 'sans-serif'] },
+            colors: {
+              brand: {
+                900: '#0f172a',
+                800: '#1e293b',
+                accent: '#38bdf8',
+              }
+            }
+          }
+        }
+      }
+    </script>
     <script type="importmap">
 {
   "imports": {
@@ -21,7 +37,10 @@
 </script>
 </head>
 <body class="bg-slate-50">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <div id="root">
+        <div class="flex items-center justify-center h-screen">
+            <p class="text-slate-400 animate-pulse">Initializing Boardwise Portal...</p>
+        </div>
+    </div>
 </body>
 </html>
